--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
 
   <!-- SWIPER -->
@@ -44,6 +45,7 @@
 <!-- Lodash -->
 
   <script defer src="./js/youtube.js"></script>
+  <script defer src="../js/common.js"></script>
   <script defer src="./js/main.js"></script>
 
 </head>
